--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <style>
         :root {
-            --primary-color: #6a11cb;
+            --primary-color: #000000;
             --secondary-color: #2575fc;
             --accent-color: #ff8a00;
             --background-color: #f0f3ff;
