--- a/templates/index.html
+++ b/templates/index.html
@@ -86,6 +86,7 @@
         <div class="text-center text-primary">
             <div class="inline-block w-10 h-10 border-4 border-primary border-t-transparent rounded-full animate-spin mb-4"></div>
             <p>Generating your book...</p>
+            <p>Based on words ita may take long time</p>
         </div>
     </div>
 
